tests/should_fail/match_bool_only_true.nv
// should_fail: bool match with only true (not exhaustive, no wildcard)
module match_bool_only_true

fn check(b: Bool) -> String {
    return match b {
        true => "yes"
    }
}
